Projects/Project-001-Roman-Numerals-Converter/cfntemp.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation and CLI Services.

Parameters:
  parammyKey:
    Description: Select Your Key
    Type: AWS::EC2::KeyPair::KeyName #FirstKey

Resources:
  myIns:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref parammyKey
      ImageId: ami-033b95fb8079dc481
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref mySG
      UserData: !Base64 |
        #!/bin/bash -ex
        yum update -y
        pip3 install flask
        mkdir roman-project && cd roman-project
        wget https://raw.githubusercontent.com/HRNGR/myclarusway/main/aws/projects/Project-001-Roman-Numerals-Converter/app.py
        mkdir templates && cd templates
        wget https://raw.githubusercontent.com/HRNGR/myclarusway/main/aws/projects/Project-001-Roman-Numerals-Converter/templates/index.html
        wget https://raw.githubusercontent.com/HRNGR/myclarusway/main/aws/projects/Project-001-Roman-Numerals-Converter/templates/result.html
        cd ..
        python3 app.py
      Tags:
        - Key: Name
          Value: !Sub Web Server Of ${AWS::StackName}

  mySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

Outputs:
  AppUrl:
    Description: URL of the Application
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt myIns.PublicDnsName
